solve visibility hidden issue

--- a/client/src/components/Event/style.css
+++ b/client/src/components/Event/style.css
@@ -14,12 +14,12 @@
 
 .overlay {
   z-index: 100;
-  height: 70%;
+  height: 0;
+  bottom: 0;
   background-color: white;
   position: absolute;
-  top: 30%;
   width: 100%;
-  /* visibility: hidden; */
+  visibility: hidden;
   opacity: 0;
   transition: visibility .5s, opacity 0.5s linear;
 }
@@ -27,6 +27,8 @@
 .overlay.show  {
   visibility: visible;
   opacity: 1;
+  height: 70%;
+  top: 30%;
 }
 
 .eventTitle {
